@@ -56,6 +56,8 @@ they occurred between. For more detailed information see the
 @item Changing raise-tabs-on-hover takes effect immediately now [Christopher Bratusek]
 
 @item Add --tag=CC to libtool where necessary, unbrakes compilation on some arches [Gentoo]
+
+@item Improved ebuild [Christopher Bratusek]
 @end itemize
 @end itemize
 
