@@ -6,7 +6,7 @@ inherit eutils
 
 DESCRIPTION="Extensible window manager using a Lisp-based scripting language"
 HOMEPAGE="http://sawfish.wikia.com/"
-SRC_URI="mirror://sourceforge/sawmill/${P}.tar.gz"
+SRC_URI="mirror://sourceforge/sawmill/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -29,11 +29,6 @@ src_unpack() {
 }
 
 src_compile() {
-	# Make sure we include freetype2 headers before freetype1 headers,
-	# else Xft2 borks, <azarah@gentoo.org> (13 Dec 2002)
-	export C_INCLUDE_PATH="${C_INCLUDE_PATH}:/usr/include/freetype2"
-	export CPLUS_INCLUDE_PATH="${CPLUS_INCLUDE_PATH}:/usr/include/freetype2"
-
 	set -- \
 		--with-gdk-pixbuf \
 		$(use_with audiofile) \
@@ -41,12 +36,7 @@ src_compile() {
 
 	if use gnome; then
 		set -- "$@" \
-			--with-gnome-prefix=/usr \
-			--enable-gnome-widgets 
-	else
-		set -- "$@" \
-			--disable-gnome-widgets 
-	fi
+			--with-gnome-prefix=/usr
 
 	if ! use nls; then
 		set -- "$@" \
@@ -55,10 +45,6 @@ src_compile() {
 	fi
 
 	econf "$@" || die "configure failed"
-
-	# The following two lines allow sawfish to compile with gcc 2.95
-	# (see bug 18294)
-	sed -i -e 's:REP_CFLAGS=:REP_CFLAGS=-I/usr/include/freetype2 :' Makedefs
 
 	emake || die "make failed"
 }
